Home page design completed

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="slider-wrap">
         <div class="slide active-slide">
           <div class="image-wrap">
-            <img class="image" src="/img/slider/13.jpg" alt="" />
+            <img class="image" src="./img/slider/13.jpg" alt="" />
           </div>
           <div class="slider-content">
             <p class="para">Lorem ipsum dolor sit amet.</p>
@@ -62,7 +62,7 @@
         </div>
         <div class="slide">
           <div class="image-wrap">
-            <img class="image" src="/img/slider/14.jpg" alt="" />
+            <img class="image" src="./img/slider/14.jpg" alt="" />
           </div>
           <div class="slider-content slider-content-right">
             <p class="para">Lorem ipsum dolor sit amet.</p>
@@ -87,17 +87,17 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img class="img-banner h-100" src="/img/banner/banner1.png" alt="" />
+          <img class="img-banner h-100" src="./img/banner/banner1.png" alt="" />
         </div>
         <div class="col-md-6">
           <div class="row">
             <div class="col-12">
-              <img class="img-banner" src="/img/banner/banner2.png" alt="" />
+              <img class="img-banner" src="./img/banner/banner2.png" alt="" />
             </div>
             <div class="col-12">
               <img
                 class="img-banner h-100"
-                src="/img/banner/banner3.png"
+                src="./img/banner/banner3.png"
                 alt=""
               />
             </div>
@@ -121,7 +121,7 @@
             <div class="category-item mb-4 pt-5">
               <img
                 class="w-50"
-                src="/img/category/category-1.png"
+                src="./img/category/category-1.png"
                 alt="Category 1"
               />
               <p class="font-weight-bold mt-3">
@@ -135,7 +135,7 @@
             <div class="category-item mb-4 pt-5">
               <img
                 class="w-50"
-                src="/img/category/category-3.png"
+                src="./img/category/category-3.png"
                 alt="Category 1"
               />
               <p class="font-weight-bold mt-3">
@@ -149,7 +149,7 @@
             <div class="category-item mb-4 pt-5">
               <img
                 class="w-50"
-                src="/img/category/category-2.png"
+                src="./img/category/category-2.png"
                 alt="Category 1"
               />
               <p class="font-weight-bold mt-3">
@@ -163,7 +163,7 @@
             <div class="category-item mb-4 pt-5">
               <img
                 class="w-50"
-                src="/img/category/category-1.png"
+                src="./img/category/category-1.png"
                 alt="Category 1"
               />
               <p class="font-weight-bold mt-3">
@@ -177,7 +177,7 @@
             <div class="category-item mb-4 pt-5">
               <img
                 class="w-50"
-                src="/img/category/category-2.png"
+                src="./img/category/category-2.png"
                 alt="Category 1"
               />
               <p class="font-weight-bold mt-3">
@@ -191,7 +191,7 @@
             <div class="category-item mb-4 pt-5">
               <img
                 class="w-50"
-                src="/img/category/category-1.png"
+                src="./img/category/category-1.png"
                 alt="Category 1"
               />
               <p class="font-weight-bold mt-3">
@@ -205,7 +205,7 @@
             <div class="category-item mb-4 pt-5">
               <img
                 class="w-50"
-                src="/img/category/category-2.png"
+                src="./img/category/category-2.png"
                 alt="Category 1"
               />
               <p class="font-weight-bold mt-3">
@@ -219,7 +219,7 @@
             <div class="category-item mb-4 pt-5">
               <img
                 class="w-50"
-                src="/img/category/category-3.png"
+                src="./img/category/category-3.png"
                 alt="Category 1"
               />
               <p class="font-weight-bold mt-3">
@@ -347,7 +347,7 @@
           </div>
         </div>
         <div class="col-lg-4 text-center">
-          <img class="" src="/img/fruits/2.png" alt="" />
+          <img class="" src="./img/fruits/2.png" alt="" />
         </div>
         <div class="col-lg-4">
           <div class="row chose-us-info-right m-3 text-left">
@@ -393,7 +393,7 @@
 
     <!-- any qs section start -->
     <div
-      style="background-image: url(/img/fruits/bg_qs.jpg)"
+      style="background-image: url(./img/fruits/bg_qs.jpg)"
       class="any-qs text-center m-auto p-5"
     >
       <h1 class="mt-5 any-qs-text">ANY QUESTION YOU HAVE</h1>
@@ -415,7 +415,7 @@
             <a class="footer-logo" href="#">
               <img
                 class="pb-2"
-                src="/img/logo/logo.png"
+                src="./img/logo/logo.png"
                 alt="Your Logo"
                 width="120"
               /> </a
