--- a/index.html
+++ b/index.html
@@ -14,25 +14,45 @@
     <header class="fruity-header">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col-2">
             <a class="navbar-brand" href="">
               <img src="img/logo/logo.png" alt="Your Logo" width="120" />
             </a>
           </div>
-          <div class="col-10">
+          <div class="col-7">
             <div class="menu-wrap">
               <ul class="menu">
-                <li class="menu-item"><a href="#">Item</a></li>
-                <li class="menu-item"><a href="#">Item</a></li>
-                <li class="menu-item"><a href="#">Item</a></li>
-                <li class="menu-item"><a href="#">Item</a></li>
-                <li class="menu-item"><a href="#">Item</a></li>
-                <li class="menu-item"><a href="#">Item</a></li>
-                <li class="menu-item"><a href="#">Item</a></li>
+                <li class="menu-item"><a href="#">Home+</a></li>
+                <li class="menu-item"><a href="#">About+</a></li>
+                <li class="menu-item"><a href="#">Shop+</a></li>
+                <li class="menu-item"><a href="#">News+</a></li>
+                <ul class="sub-menu">
+                  <li class="menu-item"><a href="#">Link to Be</a></li>
+                  <li class="menu-item"><a href="#">Link to Be</a></li>
+                  <li class="menu-item"><a href="#">Link to Be</a></li>
+                  <li class="menu-item"><a href="#">Link to Be</a></li>
+                  <li class="menu-item"><a href="#">Link to Be</a></li>
+                </ul>
+                <li class="menu-item"><a href="#">Team+</a></li>
+                <li class="menu-item"><a href="#">Contact</a></li>
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col-3">
+            <div class="row d-grid justify-content-center align-items-center">
+              <div class="col-4">
+                <button class="any-qs-btn menu-btnnn">Get A Quite</button>
+              </div>
+              <div class="col-2 header-icons m-1 pb-2 pt-2">
+                <i class="fa fa-search"></i>
+              </div>
+              <div class="col-2 header-icons m-1 pb-2 pt-2">
+                <i class="fa fa-user"></i>
+              </div>
+              <div class="col-2 header-icons m-1 pb-2 pt-2">
+                <i class="fa fa-cart-shopping"></i>
+              </div>
+            </div>
             <i class="fa fa-bars menu-humberger"></i>
           </div>
         </div>
