--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <ul class="menu">
                 <li class="menu-item"><a href="#">Home+</a></li>
                 <li class="menu-item"><a href="#">About+</a></li>
-                <li class="menu-item"><a href="#">Shop+</a></li>
+                <li class="menu-item"><a href="Pages/Shop.html">Shop+</a></li>
                 <li class="menu-item"><a href="#">News+</a></li>
                 <ul class="sub-menu">
                   <li class="menu-item"><a href="#">Link to Be</a></li>
