log in ad 404updated

--- a/Pages/404.html
+++ b/Pages/404.html
@@ -210,7 +210,28 @@
       </div>
     </header>
     <!-- header end -->
-   
+    <section>
+      <h1
+        style="
+          color: var(--main-clr);
+          font-size: 175px;
+          text-align: center;
+          margin-top: 80px;
+        "
+      >
+        404
+      </h1>
+      <p
+        style="
+          color: rgb(206, 32, 32);
+          font-size: 50px;
+          text-align: center;
+          margin-bottom: 80px;
+        "
+      >
+        You are lost! Go back to home
+      </p>
+    </section>
     <!-- footer start -->
     <footer class="footer-wrap">
       <div class="container-fluid p-5">
