Log in and Sign up completed

--- a/Pages/login.html
+++ b/Pages/login.html
@@ -177,7 +177,8 @@
                   ></a>
                   <div class="menu-subs menu-column-1">
                     <ul>
-                      <li><a href="#">Login and Register</a></li>
+                      <li><a href="login.html">Login</a></li>
+                      <li><a href="sign-in.html">Register</a></li>
                       <li><a href="#">Help and Question</a></li>
                       <li><a href="#">Privacy and Policy</a></li>
                       <li><a href="#">Term of Cookies</a></li>
@@ -210,7 +211,112 @@
       </div>
     </header>
     <!-- header end -->
-   
+    <!-- common banner start -->
+    <div class="common-banner">
+      <div class="bg-opacity d-flex align-items-center">
+        <div class="container row">
+          <div
+            class="col-sm-6 d-flex justify-content-sm-start justify-content-center"
+          >
+            <div class="d-flex justify-content-sm-end justify-content-center">
+              <div class="">
+                <h6 class="main-color">// Welcome to Fruity</h6>
+                <h1 class="text-white">Account</h1>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-sm-6 d-flex justify-content-sm-end justify-content-center"
+          >
+            <span class="text-white"><b>Home&nbsp;&nbsp;&nbsp; /</b></span>
+            <span class="main-color"><b>&nbsp;&nbsp;&nbsp;Sign In</b></span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- common banner end -->
+    <!-- Log in form start-->
+    <div class="container mt-5">
+      <h1 class="text-center mb-4 main-color">Sign In</h1>
+      <form class="w-50 m-auto">
+        <div class="mb-4">
+          <input
+            type="email"
+            id="fruity-login-email"
+            class="w-100 p-2 border-1 border"
+          />
+          <label class="form-label" for="fruity-login-email"
+            >Email address</label
+          >
+        </div>
+        <div class="form-outline mb-4">
+          <input
+            type="password"
+            id="fruity-login-pass"
+            class="w-100 p-2 border-1 border"
+          />
+          <label class="form-label" for="fruity-login-pass">Password</label>
+        </div>
+        <div class="row mb-4">
+          <div class="col d-flex justify-content-center">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="fruity-login-check"
+                checked
+              />
+              <label class="form-check-label" for="fruity-login-check">
+                Remember me
+              </label>
+            </div>
+          </div>
+
+          <div class="col">
+            <a class="main-color" href="#!">Forgot password?</a>
+          </div>
+        </div>
+        <button
+          type="button"
+          class="log-in-button btn-block mb-4 p-2 text-white"
+        >
+          Sign in
+        </button>
+        <div class="text-center">
+          <p>
+            Not a member? <a class="main-color" href="sign-in.html">Register</a>
+          </p>
+          <p>or sign up with:</p>
+          <button
+            type="button"
+            class="main-color btn border-5 border btn-floating mx-1"
+          >
+            <i class="fab fa-facebook-f"></i>
+          </button>
+          <button
+            type="button"
+            class="main-color btn border-5 border btn-floating mx-1"
+          >
+            <i class="fab fa-google"></i>
+          </button>
+          <button
+            type="button"
+            class="main-color btn border-5 border btn-floating mx-1"
+          >
+            <i class="fab fa-twitter"></i>
+          </button>
+          <button
+            type="button"
+            class="main-color btn border-5 border btn-floating mx-1"
+          >
+            <i class="fab fa-github"></i>
+          </button>
+        </div>
+      </form>
+    </div>
+    <!-- Log in form end-->
+
     <!-- footer start -->
     <footer class="footer-wrap">
       <div class="container-fluid p-5">
