--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
                   ></a>
                   <div class="menu-subs menu-column-1">
                     <ul>
-                      <li><a href="#">Login and Register</a></li>
+                      <li><a href="login.html">Login</a></li>
+                      <li><a href="sign-in.html">Register</a></li>
                       <li><a href="#">Help and Question</a></li>
                       <li><a href="#">Privacy and Policy</a></li>
                       <li><a href="#">Term of Cookies</a></li>
